--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ xcuserdata/
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
-*.xcuserstate
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
@@ -23,7 +22,7 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcuserstate
+#*.xcuserstate
 
 ## Obj-C/Swift specific
 *.hmap
